authorities-management/src/main/resources/kubernetes/authorities-management-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authorities-management-policy
  namespace: pacelli-editor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authorities-management
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: marc-authority-editor
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: marc-authority-editor
      toPorts:
        - ports:
            - port: "8080"
    - toEndpoints:
        - matchLabels:
            istio: egressgateway
            io.kubernetes.pod.namespace: istio-egressgateway
      toPorts:
        - ports:
            - port: "8080"
